# libunistd

./: CMAKER.md  CMakeLists.txt  LICENSE  README.md
docs/: stubs.txt
portable/: CMakeLists.txt  headers.cmake  sources.cmake
qdecoder/src/: CMakeLists.txt
regex/: CMakeLists.txt  regex.cpp
sqlite/: CMakeLists.txt
test/: test_io_uring.cpp  test_io_uring2.cpp
unistd/: CMakeLists.txt  SystemLog.h  cfunc.h  dirent.cpp  gettimeofday.h  io_uring.h  io_uring2.h  netdb.h  pthread.cpp  sigaction.h  sources.cmake  stdatomic.cpp  stdatomic.h  strings.h  syslog.cpp  termios.h  unistd.cpp  unistd.h
unistd/atomic/: stdatomic.h
unistd/linux/: limits.h
unistd/sys/: file.cpp  file.h  ioctl.c  ioctl.h  ipc.h  posix_stdio.h  posix_types.h  sem.cpp  simd.h  socket.h  sys_types.h  time.h  types.h  uio.c  uio.h  un.c  un.h  wait.h
uuid/: CMakeLists.txt  all-io.h  randutils.cpp
xxhash/: CMakeLists.txt
