# libunistd/CMakeList.txt

cmake_minimum_required (VERSION 3.30)
option(BUILD_SHARED_LIBS "Build using shared libraries" ON)
option(BUILD_PORTABLE_SHARED "Build libportable as shared-library" OFF)
option(BUILD_UNISTD_SHARED "Build libunistd as shared-library" OFF)
project(libunistd)
message("<<< Parsing libunistd/CMakeList.txt")
message("--- Building ${PROJECT_NAME} ${CMAKE_SYSTEM_NAME}:${CMAKE_HOST_SYSTEM_PROCESSOR}:${CMAKE_GENERATOR_TOOLSET} ---")

option(UE4 "Disable _ITERATOR_DEBUG_LEVEL for UE4 compatibility" OFF)
option(WITH_TESTS "Enable this to build the tests / examples as well." OFF)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_C_STANDARD 23)
#set(CMAKE_GENERATOR_PLATFORM x64)

add_definitions(-DTRACE_MSG_FUNCTIONS)
add_definitions(-D_CRT_DECLARE_NONSTDC_NAMES=0)
#define _CRT_SECURE_NO_DEPRECATE 
#define _CRT_SECURE_NO_WARNINGS
#define _WINSOCK_DEPRECATED_NO_WARNINGS
#define _CRT_NONSTDC_NO_WARNINGS

if(UE4)
add_definitions(-D_ITERATOR_DEBUG_LEVEL=0)
add_definitions(-D_HAS_ITERATOR_DEBUGGING=0)
endif(UE4)
# cmake -D_HAS_ITERATOR_DEBUGGING=0 -D_ITERATOR_DEBUG_LEVEL=0 -A x64 ..
# _HAS_ITERATOR_DEBUGGING=0;_ITERATOR_DEBUG_LEVEL=0;

include(libunistd-config.cmake)

if(WIN32)
	include_directories(unistd)
	add_subdirectory(unistd)
	link_directories(build/win64)
	link_libraries(libunistd Ws2_32)
	message("Linking libunistd")
endif(WIN32)

if(NOT WIN32 AND NOT APPLE)
	link_libraries(rt pthread dl)
	message("Linking rt pthread dl")
endif(NOT WIN32 AND NOT APPLE)

#add_subdirectory(portable)
#add_subdirectory(sqlite)
#add_subdirectory(uuid)
#add_subdirectory(regex)
#add_subdirectory(xxhash)
#add_subdirectory(lmdb)
if(WITH_TESTS)
	add_subdirectory(test)
endif()
option(BUILD_PORTABLE "Build portable" OFF)
option(BUILD_SQLITE "Build sqlite" OFF)
option(BUILD_UUID "Build uuid" OFF)
option(BUILD_REGEX "Build regex" OFF)
option(BUILD_XXHASH "Build xxhash" OFF)

if (BUILD_PORTABLE)
	message("Buliding portable")
    add_subdirectory(portable)
endif (BUILD_PORTABLE)
if (BUILD_SQLITE)
    add_subdirectory(sqlite)
endif (BUILD_SQLITE)
if (BUILD_UUID)
    add_subdirectory(uuid)
endif (BUILD_UUID)
if (BUILD_REGEX)
	add_subdirectory(regex)
endif (BUILD_REGEX)
if (BUILD_XXHASH)
    add_subdirectory(xxhash)
endif (BUILD_XXHASH)
if (WITH_TESTS)
    add_subdirectory(test)
endif (WITH_TESTS)

